# multiprocess_copyfile

./: .gitignore
project/: CMakeLists.txt  CMakePresets.json  project.cpp  start.bat
